--- a/index.html/index.html
+++ b/index.html/index.html
@@ -5,30 +5,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div>  
      <input class="display"/>
                    
-      <button class="gray-button">AC</button>
-      <button class="gray-button" >+/-</button>
-    <button class="blue-button">/</button>
-      <button class="blue-button">*</button>
-      <button class="black-button">7</button>
-      <button  class="black-button">8</button>
-      <button  class="black-button">8</button>
-      <button class="blue-button">-</button>
-      <button  class="black-button">4</button>
-      <button  class="black-button">5</button>
-      <button  class="black-button">6</button>
-      <button class="blue-button">+</button>
-      <button  class="black-button">1</button> 
-      <button  class="black-button">2</button>
-      <button  class="black-button">=</button>
-      <button class="blue-button equal">0</button>
-      <button class="black-button">.</button>
- 
+      <button class="gray-button" onclick="limparEcra()">AC</button>
+      <button class="gray-button" onclick="inverte()">+/-</button>
+      <button class="blue-button" onclick="adicionarCaracter('/')">/</button>
+      <button class="blue-button" onclick="adicionarCaracter('*')">*</button>
+      <button class="black-button" onclick="adicionarCaracter('7')">7</button>
+      <button class="black-button" onclick="adicionarCaracter('8')">8</button>
+      <button class="black-button" onclick="adicionarCaracter('9')">9</button>
+      <button class="blue-button" onclick="adicionarCaracter('-')">-</button>
+      <button class="black-button" onclick="adicionarCaracter('4')">4</button>
+      <button class="black-button" onclick="adicionarCaracter('5')">5</button>
+      <button class="black-button" onclick="adicionarCaracter('6')">6</button>
+      <button class="blue-button" onclick="adicionarCaracter('+')">+</button>
+      <button class="black-button" onclick="adicionarCaracter('1')">1</button> 
+      <button class="black-button" onclick="adicionarCaracter('2')">2</button>
+      <button class="black-button" onclick="adicionarCaracter('3')">3</button>
+      <button class="black-button equal" onclick="calcular()">=</button>
+      <button class="black-button zero" onclick="adicionarCaracter('0')">0</button>
+      <button class="black-button" onclick="adicionarCaracter('.')">.</button>
                     
    </div>
+   <script src="script.js"></script>
 </body>
 </html>
